--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/reset.css">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="assets/reset.css">
+    <link rel="stylesheet" href="assets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&display=swap" rel="stylesheet">
     <title>Let's chat.</title>
 </head>
 
+<body>
+
 <!-- Header and nav bar -->
 <section class="header">
-    <h1>Hori<span class="seo">seo</span>n</h1>
+    <h1>Hi, I'm Candice.</h1>
     <nav>
         <ul>
             <li>
-                <a href="#search-engine-optimization">Search Engine Optimization</a>
+                <a href="#about.">about</a>
             </li>
             <li>
-                <a href="#online-reputation-management">Online Reputation Management</a>
+                <a href="#work.">work</a>
             </li>
             <li>
-                <a href="#social-media-marketing">Social Media Marketing</a>
+                <a href="#contact.">contact</a>
             </li>
         </ul>
     </nav>
@@ -33,8 +35,40 @@
 <!-- Hero image -->
 <header class="hero"></header>
 
+<!-- About -->
+<section class="about">
+    <h1>about.</h1>
+    <p>
+        text about me.
+    </p>
+</section>
 
-<body>
+<!-- Work -->
+<section class="work">
+    <h1>work.</h1>
+    <article class="project-1">
+    </article>
+    <article lcass="project-2">
+    </article>
+    <article lcass="project-3">
+    </article>
+</section>
+
+<!-- Contact info -->
+<section class="contact">
+    <h1>let's chat IRL.</h1>
+    <ul>
+        <li>
+            <a href="LINKEDIN LINK">linkedin.</a>
+        </li>
+        <li>
+            <a href="INSTAGRAM LINK">instagram.</a>
+        </li>
+        <li>
+            <a href="EMAIL ADDRESS">email.</a>
+        </li>
+    </ul>
+</section>
     
 </body>
 </html>
