--- a/index.html
+++ b/index.html
@@ -7,68 +7,85 @@
     <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&display=swap" rel="stylesheet">
     <title>Let's chat.</title>
 </head>
 
 <body>
+    <!-- Header and nav bar -->
+    <header class="header">
+        <h1>Hi there, I'm Candice.</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about">about.</a>
+                    </li>
+                    <li>
+                        <a href="#work">work.</a>
+                    </li>
+                    <li>
+                        <a href="#contact">contact.</a>
+                    </li>
+                </ul>
+            </nav>
+    </header>
 
-<!-- Header and nav bar -->
-<section class="header">
-    <h1>Hi, I'm Candice.</h1>
-    <nav>
-        <ul>
-            <li>
-                <a href="#about.">about</a>
-            </li>
-            <li>
-                <a href="#work.">work</a>
-            </li>
-            <li>
-                <a href="#contact.">contact</a>
-            </li>
-        </ul>
-    </nav>
-</section>
+    <!-- Hero image: <header class="hero"></header> -->
 
-<!-- Hero image -->
-<header class="hero"></header>
+    <br><br><br><br>
 
-<!-- About -->
-<section class="about">
-    <h1>about.</h1>
-    <p>
-        text about me.
-    </p>
-</section>
+    <!-- About -->
+    <section class="about" id="about">
+        <div class="heading">
+            <h1>about.</h1>
+        <div class="blurb">
+            <p>
+                Text goes here.
+            </p>
+        </div>
+    </section>
 
-<!-- Work -->
-<section class="work">
-    <h1>work.</h1>
-    <article class="project-1">
-    </article>
-    <article lcass="project-2">
-    </article>
-    <article lcass="project-3">
-    </article>
-</section>
+    <br><br><br><br>
 
-<!-- Contact info -->
-<section class="contact">
-    <h1>let's chat IRL.</h1>
-    <ul>
-        <li>
-            <a href="LINKEDIN LINK">linkedin.</a>
-        </li>
-        <li>
-            <a href="INSTAGRAM LINK">instagram.</a>
-        </li>
-        <li>
-            <a href="EMAIL ADDRESS">email.</a>
-        </li>
-    </ul>
-</section>
-    
+    <!-- Work -->
+    <section class="work" id="work">
+        <h1>work.</h1>
+    </section>
+
+    <section class="projects">
+        <div class="project-1">
+            <img src="assets/images/image 1.png" alt="Luis Barragan image 1 of outside" width="50%">
+        </div>
+
+        <div class="project-2">
+            <img src="assets/images/image 2.png" alt="Luis Barragan image 2 of outside" width="50%">
+        </div>
+
+        <div class="project-3">
+            <img src="assets/images/image 3.png" alt="Luis Barragan image 3 of outside" width="50%">
+        </div>
+    </section>
+
+    <br><br><br><br>
+
+    <!-- Contact info -->
+    <section class="contact" id="contact">
+        <h1>let's chat IRL.</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://www.linkedin.com/in/candicewu/" target="_blank">linkedin.</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/candiceywu" target="_blank">github.</a>
+                    </li>
+                    <li>
+                        <a href="mailto: candice.ying.wu@gmail.com" target="_blank">email.</a>
+                    </li>
+                </ul>
+            </nav>
+    </section>
 </body>
+
 </html>
