updated with live links

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <section class="about" id="about">
         <div class="heading">
             <h1>about.</h1>
+        </div>
         <div class="blurb">
             <p>
                 Text goes here.
@@ -50,21 +51,23 @@
 
     <!-- Work -->
     <section class="work" id="work">
-        <h1>work.</h1>
-    </section>
 
-    <section class="projects">
+        <div class="heading">
+            <h1>work.</h1>
+        </div>
+
         <div class="project-1">
-            <img src="assets/images/image 1.png" alt="Luis Barragan image 1 of outside" width="50%">
+            <a href="https://candiceywu.github.io/week1-refactor-homework/" target="_blank"><img src="assets/images/image 1.png" alt="Luis Barragan image 1 of outside"></a>
         </div>
 
         <div class="project-2">
-            <img src="assets/images/image 2.png" alt="Luis Barragan image 2 of outside" width="50%">
+            <img src="assets/images/image 2.png" alt="Luis Barragan image 2 of outside" width="300px">
         </div>
 
         <div class="project-3">
-            <img src="assets/images/image 3.png" alt="Luis Barragan image 3 of outside" width="50%">
+            <img src="assets/images/image 3.png" alt="Luis Barragan image 3 of outside" width="300px">
         </div>
+
     </section>
 
     <br><br><br><br>
