--- a/index.html
+++ b/index.html
@@ -56,16 +56,20 @@
             <h1>work.</h1>
         </div>
 
-        <div class="project-1">
+        <div class="project-large">
+            <header>Horiseon application.</header>
             <a href="https://candiceywu.github.io/week1-refactor-homework/" target="_blank"><img src="assets/images/image 1.png" alt="Luis Barragan image 1 of outside"></a>
         </div>
 
-        <div class="project-2">
+        <div class="project-small">
+            <header>application 2</header>
             <img src="assets/images/image 2.png" alt="Luis Barragan image 2 of outside" width="300px">
-        </div>
-
-        <div class="project-3">
+            <header>application 3</header>
             <img src="assets/images/image 3.png" alt="Luis Barragan image 3 of outside" width="300px">
+            <header>application 4</header>
+            <img src="assets/images/image 4.jpeg" alt="Luis Barragan image 4 of inside" width="300px">
+            <header>application 5</header>
+            <img src="assets/images/image 5.jpeg" alt="Luis Barragan image 5 of inside" width="300px">
         </div>
 
     </section>
