portrait photo and updated css

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <h1>about.</h1>
         </div>
         <div class="blurb">
+            <img src="assets/images/portrait.jpg" alt="photo of Candice Wu" width="100%"></a>
             <p>
                 Text goes here.
             </p>
@@ -62,13 +63,13 @@
         </div>
 
         <div class="project-small">
-            <header>application 2</header>
+            <header>application 2.</header>
             <img src="assets/images/image 2.png" alt="Luis Barragan image 2 of outside" width="300px">
-            <header>application 3</header>
+            <header>application 3.</header>
             <img src="assets/images/image 3.png" alt="Luis Barragan image 3 of outside" width="300px">
-            <header>application 4</header>
+            <header>application 4.</header>
             <img src="assets/images/image 4.jpeg" alt="Luis Barragan image 4 of inside" width="300px">
-            <header>application 5</header>
+            <header>application 5.</header>
             <img src="assets/images/image 5.jpeg" alt="Luis Barragan image 5 of inside" width="300px">
         </div>
 
