css styles update

--- a/index.html
+++ b/index.html
@@ -31,47 +31,55 @@
             </nav>
     </header>
 
-    <!-- Hero image: <header class="hero"></header> -->
+        <br><br><br><br>
 
-    <br><br><br><br>
+    <main>
+        <!-- About -->
+        <section class="about" id="about">
+            <div class="heading">
+                <h1>about.</h1>
+            </div>
+            <div class="blurb">
+                <img src="assets/images/portrait.jpg" alt="photo of Candice Wu" width="100%"></a>
+                <p>
+                    Text goes here.
+                </p>
+            </div>
+        </section>
 
-    <!-- About -->
-    <section class="about" id="about">
-        <div class="heading">
-            <h1>about.</h1>
-        </div>
-        <div class="blurb">
-            <img src="assets/images/portrait.jpg" alt="photo of Candice Wu" width="100%"></a>
-            <p>
-                Text goes here.
-            </p>
-        </div>
-    </section>
+        <br><br><br><br>
 
-    <br><br><br><br>
+        <!-- Work -->
+        <section class="work" id="work">
 
-    <!-- Work -->
-    <section class="work" id="work">
+            <div class="heading">
+                <h1>work.</h1>
+            </div>
 
-        <div class="heading">
-            <h1>work.</h1>
-        </div>
+            <div class="project-large">
+                <header>Horiseon application.</header>
+                <a href="https://candiceywu.github.io/week1-refactor-homework/" target="_blank"><img src="assets/images/image 1.png" alt="Luis Barragan image 1 of outside"></a>
+            </div>
 
-        <div class="project-large">
-            <header>Horiseon application.</header>
-            <a href="https://candiceywu.github.io/week1-refactor-homework/" target="_blank"><img src="assets/images/image 1.png" alt="Luis Barragan image 1 of outside"></a>
-        </div>
+            <div class="project-small">
+                <header>application 2.</header>
+                <img src="assets/images/image 2.png" alt="Luis Barragan image 2 of outside" width="300px">
+            </div>
 
-        <div class="project-small">
-            <header>application 2.</header>
-            <img src="assets/images/image 2.png" alt="Luis Barragan image 2 of outside" width="300px">
-            <header>application 3.</header>
-            <img src="assets/images/image 3.png" alt="Luis Barragan image 3 of outside" width="300px">
-            <header>application 4.</header>
-            <img src="assets/images/image 4.jpeg" alt="Luis Barragan image 4 of inside" width="300px">
-            <header>application 5.</header>
-            <img src="assets/images/image 5.jpeg" alt="Luis Barragan image 5 of inside" width="300px">
-        </div>
+            <div class="project-small">
+                <header>application 3.</header>
+                <img src="assets/images/image 3.png" alt="Luis Barragan image 3 of outside" width="300px">
+            </div>
+
+            <div class="project-small">
+                <header>application 4.</header>
+                <img src="assets/images/image 4.jpeg" alt="Luis Barragan image 4 of inside" width="300px">
+            </div>
+
+            <div class="project-small">
+                <header>application 5.</header>
+                <img src="assets/images/image 5.jpeg" alt="Luis Barragan image 5 of inside" width="300px">
+            </div>
 
     </section>
 
@@ -94,6 +102,7 @@
                 </ul>
             </nav>
     </section>
+    </main> 
 </body>
 
 </html>
