updated with new parent containers

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <div class="heading">
                 <h1>about.</h1>
             </div>
+        </section> 
+
+        <section>
             <div class="blurb">
                 <img src="assets/images/portrait.jpg" alt="photo of Candice Wu" width="100%"></a>
                 <p>
@@ -51,11 +54,12 @@
 
         <!-- Work -->
         <section class="work" id="work">
-
             <div class="heading">
                 <h1>work.</h1>
             </div>
+        </section>
 
+        <section class="projects">
             <div class="project-large">
                 <header>Horiseon application.</header>
                 <a href="https://candiceywu.github.io/week1-refactor-homework/" target="_blank"><img src="assets/images/image 1.png" alt="Luis Barragan image 1 of outside"></a>
@@ -80,8 +84,8 @@
                 <header>application 5.</header>
                 <img src="assets/images/image 5.jpeg" alt="Luis Barragan image 5 of inside" width="300px">
             </div>
-
-    </section>
+        </section>
+    </main>
 
     <br><br><br><br>
 
@@ -102,7 +106,6 @@
                 </ul>
             </nav>
     </section>
-    </main> 
 </body>
 
 </html>
