updated photo and blurb to be on right side of page

--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@
             <div class="heading">
                 <h1>about.</h1>
             </div>
-        </section> 
 
-        <section>
             <div class="blurb">
                 <img src="assets/images/portrait.jpg" alt="photo of Candice Wu" width="100%"></a>
                 <p>
-                    Text goes here.
+                    Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. 
                 </p>
             </div>
         </section>
@@ -60,31 +58,35 @@
         </section>
 
         <section class="projects">
+
             <div class="project-large">
-                <header>Horiseon application.</header>
+                <header>PROJECTS</header>
+                <!-- change header back to 'horiseon' -->
                 <a href="https://candiceywu.github.io/week1-refactor-homework/" target="_blank"><img src="assets/images/image 1.png" alt="Luis Barragan image 1 of outside"></a>
             </div>
 
             <div class="project-small">
                 <header>application 2.</header>
-                <img src="assets/images/image 2.png" alt="Luis Barragan image 2 of outside" width="300px">
+                <img src="assets/images/image 2.png" alt="Luis Barragan image 2 of outside">
             </div>
 
             <div class="project-small">
                 <header>application 3.</header>
-                <img src="assets/images/image 3.png" alt="Luis Barragan image 3 of outside" width="300px">
+                <img src="assets/images/image 3.png" alt="Luis Barragan image 3 of outside">
             </div>
 
             <div class="project-small">
                 <header>application 4.</header>
-                <img src="assets/images/image 4.jpeg" alt="Luis Barragan image 4 of inside" width="300px">
+                <img src="assets/images/image 4.jpeg" alt="Luis Barragan image 4 of inside">
             </div>
-
+ 
             <div class="project-small">
                 <header>application 5.</header>
-                <img src="assets/images/image 5.jpeg" alt="Luis Barragan image 5 of inside" width="300px">
+                <img src="assets/images/image 5.jpeg" alt="Luis Barragan image 5 of inside">
             </div>
+
         </section>
+        
     </main>
 
     <br><br><br><br>
