--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
             <div class="blurb">
                 <img src="assets/images/portrait.jpg" alt="photo of Candice Wu" width="100%"></a>
                 <p>
-                    Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. Text goes here. 
+                    I'm new here, but I think you are too. I've spent my life working in ocean resource policy and resilience management, but I'm in the midst of switching career angles - as in, I still want to focus my life's energy on conservation and stewardship, but just through a new approach. <br><br>
+                    This year's goal is to couple my new skills in coding with my tried-and-true talents as a strategist and project manager to strengthen my contribution towards a collective effort. As technological advancements become more palpable, I want to ensure I'm right alongside these solutions as they tackle our global climate crisis. 
+                    <br><br>
+                    As Jacques Cousteau once said: "The sea, the great unifier, is man's only hope. Now, as never before, the old phrase has a literal meaning: we are all in the same boat."
+                    <br><br>
+                    So, let's do this together.
                 </p>
             </div>
         </section>
@@ -56,32 +61,32 @@
                 <h1>work.</h1>
             </div>
             
-            <div class="project-large">
-                <header>PROJECTS</header>
-                <!-- change header back to 'horiseon' -->
-                <a href="https://candiceywu.github.io/week1-refactor-homework/" target="_blank"><img src="assets/images/image 1.png" alt="Luis Barragan image 1 of outside"></a>
-            </div>
+            <div class="projects">
+                <div class="app-large">
+                    <header>Horiseon application.</header>
+                    <a href="https://candiceywu.github.io/week1-refactor-homework/" target="_blank"><img src="assets/images/image 1.png" alt="Luis Barragan image 1 of outside" width="100%"></a>
+                </div>
 
-            <div class="project-small">
-                <header>application 2.</header>
-                <img src="assets/images/image 2.png" alt="Luis Barragan image 2 of outside">
-            </div>
+                <div class="app-small">
+                    <header>application 2.</header>
+                    <img src="assets/images/image 2.png" alt="Luis Barragan image 2 of outside" width="100%">
+                </div>
 
-            <div class="project-small">
-                <header>application 3.</header>
-                <img src="assets/images/image 3.png" alt="Luis Barragan image 3 of outside">
-            </div>
+                <div class="app-small">
+                    <header>application 3.</header>
+                    <img src="assets/images/image 3.png" alt="Luis Barragan image 3 of outside" width="100%">
+                </div>
 
-            <div class="project-small">
-                <header>application 4.</header>
-                <img src="assets/images/image 4.jpeg" alt="Luis Barragan image 4 of inside">
-            </div>
+                <div class="app-small">
+                    <header>application 4.</header>
+                    <img src="assets/images/image 4.jpeg" alt="Luis Barragan image 4 of inside" width="100%">
+                </div>
  
-            <div class="project-small">
-                <header>application 5.</header>
-                <img src="assets/images/image 5.jpeg" alt="Luis Barragan image 5 of inside">
+                <div class="app-small">
+                    <header>application 5.</header>
+                    <img src="assets/images/image 5.jpeg" alt="Luis Barragan image 5 of inside" width ="100%">
+                </div>
             </div>
-
         </section>
         
     </main>
