edited paragraph indentation under about section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <div class="blurb">
                 <img src="assets/images/portrait.jpg" alt="photo of Candice Wu" width="100%"></a>
                 <p>
-                    I'm new here, but I think you are too. I've spent my life working in ocean resource policy and resilience management, but I'm in the midst of switching career angles - as in, I still want to focus my life's energy on conservation and stewardship, but just through a new approach. <br><br>
+                    I'm new here, but I think you are too. 
+                    <br><br>
+                    I've spent my life working in ocean resource policy and resilience management, but I'm in the midst of switching career angles - as in, I still want to focus my life's energy on conservation and stewardship, but just through a new approach. <br><br>
                     This year's goal is to couple my new skills in coding with my tried-and-true talents as a strategist and project manager to strengthen my contribution towards a collective effort. As technological advancements become more palpable, I want to ensure I'm right alongside these solutions as they tackle our global climate crisis. 
                     <br><br>
                     As Jacques Cousteau once said: "The sea, the great unifier, is man's only hope. Now, as never before, the old phrase has a literal meaning: we are all in the same boat."
