updating portfolio with links

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&display=swap" rel="stylesheet">
-    <title>Let's chat.</title>
+
+ 
+
+    <title>let's chat.</title>
 </head>
 
 <body>
     <!-- Header and nav bar -->
     <header class="header">
-        <h1>Hi there, I'm Candice.</h1>
+        <h1>hi there, i'm candice.</h1>
             <nav>
                 <ul>
                     <li>
@@ -65,21 +68,23 @@
             
             <div class="projects">
                 <div class="app-large">
-                    <header>Horiseon application.</header>
-                    <a href="https://candiceywu.github.io/week1-refactor-homework/" target="_blank"><img src="assets/images/image 1.png" alt="Luis Barragan image 1 of outside" width="100%"></a>
+                    <header>project 1: job search.</header>
+                    <a href="https://krodriguez2022.github.io/job-search" target="_blank"><img src="assets/images/job-search.png" alt="Landing page for Project 1 Job Search application with search bar and dropdown menu" width="100%"></a>
                 </div>
 
                 <div class="app-small">
-                    <header>application 2.</header>
-                    <img src="assets/images/image 2.png" alt="Luis Barragan image 2 of outside" width="100%">
+                    <header>secure password generator.</header>
+                    <a href="https://candiceywu.github.io/secure-password-generator/" target="_blank">
+                    <img src="assets/images/securepasswordgenerator.png" alt="Final page of secure password generator homework assignment" width="100%"></a>
                 </div>
 
                 <div class="app-small">
-                    <header>application 3.</header>
-                    <img src="assets/images/image 3.png" alt="Luis Barragan image 3 of outside" width="100%">
+                    <header>weather dashboard.</header>
+                    <a href="https://candiceywu.github.io/weather-dashboard/" target="_blank">
+                    <img src="assets/images/weatherdashboard.png" alt="Home page for Weather Dashboard application that displays a city's current and five-day weather" width="100%"></a>
                 </div>
 
-                <div class="app-small">
+                <!-- <div class="app-small">
                     <header>application 4.</header>
                     <img src="assets/images/image 4.jpeg" alt="Luis Barragan image 4 of inside" width="100%">
                 </div>
@@ -87,7 +92,7 @@
                 <div class="app-small">
                     <header>application 5.</header>
                     <img src="assets/images/image 5.jpeg" alt="Luis Barragan image 5 of inside" width ="100%">
-                </div>
+                </div> -->
             </div>
         </section>
         
@@ -108,6 +113,9 @@
                     </li>
                     <li>
                         <a href="mailto: candice.ying.wu@gmail.com" target="_blank">email.</a>
+                    </li>
+                    <li>
+                        <a href="./assets/resume/Candice Wu resume.pdf" target="_blank">resumé.</a>
                     </li>
                 </ul>
             </nav>
