--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             
             <div class="projects">
                 <div class="app-large">
-                    <header>project 1: job search.</header>
+                    <header>job search.</header>
                     <a href="https://krodriguez2022.github.io/job-search" target="_blank"><img src="assets/images/job-search.png" alt="Landing page for Project 1 Job Search application with search bar and dropdown menu" width="100%"></a>
                 </div>
 
@@ -102,7 +102,7 @@
 
     <!-- Contact info -->
     <section class="contact" id="contact">
-        <h1>let's chat IRL.</h1>
+        <h1>let's connect IRL.</h1>
             <nav>
                 <ul>
                     <li>
