--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="projects">
                 <div class="app-large">
                     <header>job search.</header>
-                    <a href="https://krodriguez2022.github.io/job-search" target="_blank"><img src="assets/images/job-search.png" alt="Landing page for Project 1 Job Search application with search bar and dropdown menu" width="100%"></a>
+                    <a href="https://kimberly-rodriguez.github.io/job-search/" target="_blank"><img src="assets/images/job-search.png" alt="Landing page for Project 1 Job Search application with search bar and dropdown menu" width="100%"></a>
                 </div>
 
                 <div class="app-small">
