--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&display=swap" rel="stylesheet">
 
- 
+
 
     <title>let's chat.</title>
 </head>
@@ -19,22 +20,22 @@
     <!-- Header and nav bar -->
     <header class="header">
         <h1>hi there, i'm candice.</h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#about">about.</a>
-                    </li>
-                    <li>
-                        <a href="#work">work.</a>
-                    </li>
-                    <li>
-                        <a href="#contact">contact.</a>
-                    </li>
-                </ul>
-            </nav>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#about">about.</a>
+                </li>
+                <li>
+                    <a href="#work">work.</a>
+                </li>
+                <li>
+                    <a href="#contact">contact.</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
-        <br><br><br><br>
+    <br><br><br><br>
 
     <main>
         <!-- About -->
@@ -46,12 +47,18 @@
             <div class="blurb">
                 <img src="assets/images/portrait.jpg" alt="photo of Candice Wu" width="100%"></a>
                 <p>
-                    I'm new here, but I think you are too. 
+                    I'm new here, but I think you are too.
                     <br><br>
-                    I've spent my life working in ocean resource policy and resilience management, but I'm in the midst of switching career angles - as in, I still want to focus my life's energy on conservation and stewardship, but just through a new approach. <br><br>
-                    This year's goal is to couple my new skills in programming with my tried-and-true talents as a strategist and project manager to strengthen my contribution towards a collective effort. As technological advancements become more palpable, I want to ensure I'm right alongside these solutions as they tackle our global climate crisis. 
+                    I've spent my life working in ocean resource policy and resilience management, but I'm in the midst
+                    of switching career angles - as in, I still want to focus my life's energy on conservation and
+                    stewardship, but just through a new approach. <br><br>
+                    This year's goal is to couple my new skills in programming with my tried-and-true talents as a
+                    strategist and project manager to strengthen my contribution towards a collective effort. As
+                    technological advancements become more palpable, I want to ensure I'm right alongside these
+                    solutions as they tackle our global climate crisis.
                     <br><br>
-                    As Jacques Cousteau once said: "The sea, the great unifier, is man's only hope. Now, as never before, the old phrase has a literal meaning: we are all in the same boat."
+                    As Jacques Cousteau once said: "The sea, the great unifier, is man's only hope. Now, as never
+                    before, the old phrase has a literal meaning: we are all in the same boat."
                     <br><br>
                     So, let's do this together.
                 </p>
@@ -65,23 +72,31 @@
             <div class="heading">
                 <h1>work.</h1>
             </div>
-            
+
             <div class="projects">
                 <div class="app-large">
                     <header>job search.</header>
-                    <a href="https://kimberly-rodriguez.github.io/job-search/" target="_blank"><img src="assets/images/job-search.png" alt="Landing page for Project 1 Job Search application with search bar and dropdown menu" width="100%"></a>
+                    <a href="https://kimberly-rodriguez.github.io/job-search/" target="_blank">application.</a>
+                    <a href="https://github.com/Kimberly-Rodriguez/job-search" target="_blank">github.</a>
+                        <img src="assets/images/job-search.png"
+                            alt="Landing page for Project 1 Job Search application with search bar and dropdown menu"
+                            width="100%">
                 </div>
 
                 <div class="app-small">
-                    <header>secure password generator.</header>
-                    <a href="https://candiceywu.github.io/secure-password-generator/" target="_blank">
-                    <img src="assets/images/securepasswordgenerator.png" alt="Final page of secure password generator homework assignment" width="100%"></a>
+                    <header>my daily planner.</header>
+                    <a href="https://candiceywu.github.io/my-daily-planner/" target="_blank">application.</a>
+                    <a href="https://github.com/candiceywu/my-daily-planner" target="_blank">github.</a>
+                    <img src="assets/images/mydailyplanner6.png" alt="Image of daily planner" width="100%">
                 </div>
 
                 <div class="app-small">
                     <header>weather dashboard.</header>
-                    <a href="https://candiceywu.github.io/weather-dashboard/" target="_blank">
-                    <img src="assets/images/weatherdashboard.png" alt="Home page for Weather Dashboard application that displays a city's current and five-day weather" width="100%"></a>
+                    <a href="https://candiceywu.github.io/weather-dashboard/" target="_blank">application.</a>
+                    <a href="https://github.com/candiceywu/weather-dashboard" target="_blank">github.</a>
+                    <img src="assets/images/weatherdashboard.png"
+                        alt="Home page for Weather Dashboard application that displays a city's current and five-day weather"
+                        width="100%">
                 </div>
 
                 <!-- <div class="app-small">
@@ -95,7 +110,7 @@
                 </div> -->
             </div>
         </section>
-        
+
     </main>
 
     <br><br><br><br>
@@ -103,22 +118,22 @@
     <!-- Contact info -->
     <section class="contact" id="contact">
         <h1>let's connect IRL.</h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="https://www.linkedin.com/in/candicewu/" target="_blank">linkedin.</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/candiceywu" target="_blank">github.</a>
-                    </li>
-                    <li>
-                        <a href="mailto: candice.ying.wu@gmail.com" target="_blank">email.</a>
-                    </li>
-                    <li>
-                        <a href="./assets/resume/Candice Wu resume.pdf" target="_blank">resumé.</a>
-                    </li>
-                </ul>
-            </nav>
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://www.linkedin.com/in/candicewu/" target="_blank">linkedin.</a>
+                </li>
+                <li>
+                    <a href="https://github.com/candiceywu" target="_blank">github.</a>
+                </li>
+                <li>
+                    <a href="mailto: candice.ying.wu@gmail.com" target="_blank">email.</a>
+                </li>
+                <li>
+                    <a href="./assets/resume/Candice Wu resume.pdf" target="_blank">resumé.</a>
+                </li>
+            </ul>
+        </nav>
     </section>
 </body>
 
