updated resume with daily planner, added github and deployed links to page

--- a/index.html
+++ b/index.html
@@ -76,24 +76,31 @@
             <div class="projects">
                 <div class="app-large">
                     <header>job search.</header>
-                    <a href="https://kimberly-rodriguez.github.io/job-search/" target="_blank">application.</a>
-                    <a href="https://github.com/Kimberly-Rodriguez/job-search" target="_blank">github.</a>
-                        <img src="assets/images/job-search.png"
-                            alt="Landing page for Project 1 Job Search application with search bar and dropdown menu"
-                            width="100%">
+                    <div class="links">
+                        <a href="https://kimberly-rodriguez.github.io/job-search/" target="_blank">application.</a>
+                        <a href="https://github.com/Kimberly-Rodriguez/job-search" target="_blank">github.</a>
+                    </div>
+                    <img src="assets/images/job-search.png"
+                        alt="Landing page for Project 1 Job Search application with search bar and dropdown menu"
+                        width="100%">
+
                 </div>
 
                 <div class="app-small">
                     <header>my daily planner.</header>
-                    <a href="https://candiceywu.github.io/my-daily-planner/" target="_blank">application.</a>
-                    <a href="https://github.com/candiceywu/my-daily-planner" target="_blank">github.</a>
+                    <div class="links">
+                        <a href="https://candiceywu.github.io/my-daily-planner/" target="_blank">application.</a>
+                        <a href="https://github.com/candiceywu/my-daily-planner" target="_blank">github.</a>
+                    </div>
                     <img src="assets/images/mydailyplanner6.png" alt="Image of daily planner" width="100%">
                 </div>
 
                 <div class="app-small">
                     <header>weather dashboard.</header>
-                    <a href="https://candiceywu.github.io/weather-dashboard/" target="_blank">application.</a>
-                    <a href="https://github.com/candiceywu/weather-dashboard" target="_blank">github.</a>
+                    <div class="links">
+                        <a href="https://candiceywu.github.io/weather-dashboard/" target="_blank">application.</a>
+                        <a href="https://github.com/candiceywu/weather-dashboard" target="_blank">github.</a>
+                    </div>
                     <img src="assets/images/weatherdashboard.png"
                         alt="Home page for Weather Dashboard application that displays a city's current and five-day weather"
                         width="100%">
