--- a/index.html
+++ b/index.html
@@ -75,38 +75,73 @@
 
             <div class="projects">
                 <div class="app-large">
-                    <header>job search.</header>
+                    <header>onTrack.</header>
                     <div class="links">
-                        <a href="https://kimberly-rodriguez.github.io/job-search/" target="_blank">application.</a>
-                        <a href="https://github.com/Kimberly-Rodriguez/job-search" target="_blank">github.</a>
+                        <a href="https://peaceful-brook-31627.herokuapp.com/" target="_blank">application.</a>
+                        <a href="https://github.com/candiceywu/onTrack" target="_blank">github.</a>
                     </div>
-                    <img src="assets/images/job-search.png"
-                        alt="Landing page for Project 1 Job Search application with search bar and dropdown menu"
-                        width="100%">
-
+                    <div class="container">
+                        <img src="assets/images/onTrack.png"
+                            alt="Landing page for Project 2 onTrack application with login link" width="100%"/>
+                    </div>
                 </div>
 
-                <div class="app-small">
-                    <header>my daily planner.</header>
-                    <div class="links">
-                        <a href="https://candiceywu.github.io/my-daily-planner/" target="_blank">application.</a>
-                        <a href="https://github.com/candiceywu/my-daily-planner" target="_blank">github.</a>
-                    </div>
-                    <img src="assets/images/mydailyplanner6.png" alt="Image of daily planner" width="100%">
-                </div>
 
-                <div class="app-small">
-                    <header>weather dashboard.</header>
-                    <div class="links">
-                        <a href="https://candiceywu.github.io/weather-dashboard/" target="_blank">application.</a>
-                        <a href="https://github.com/candiceywu/weather-dashboard" target="_blank">github.</a>
+                <div class="projects">
+                    <div class="app-small">
+                        <header>job search.</header>
+                        <div class="links">
+                            <a href="https://kimberly-rodriguez.github.io/job-search/" target="_blank">application.</a>
+                            <a href="https://github.com/Kimberly-Rodriguez/job-search" target="_blank">github.</a>
+                        </div>
+                        <div class="container">
+                            <img src="assets/images/job-search.png"
+                                alt="Landing page for Project 1 Job Search application with search bar and dropdown menu"
+                                width="100%"/>
+                        </div>
                     </div>
-                    <img src="assets/images/weatherdashboard.png"
-                        alt="Home page for Weather Dashboard application that displays a city's current and five-day weather"
-                        width="100%">
-                </div>
 
-                <!-- <div class="app-small">
+
+                        <div class="app-small">
+                            <header>weather dashboard.</header>
+                            <div class="links">
+                                <a href="https://candiceywu.github.io/weather-dashboard/"
+                                    target="_blank">application.</a>
+                                <a href="https://github.com/candiceywu/weather-dashboard" target="_blank">github.</a>
+                            </div>
+                            <div class="container">
+                                <img src="assets/images/weatherdashboard.png"
+                                    alt="Home page for Weather Dashboard application that displays a city's current and five-day weather"
+                                    width="100%"/>
+                            </div>
+                        </div>
+
+                        <div class="projects">
+                            <div class="app-small">
+                                <header>note taker.</header>
+                                <div class="links">
+                                    <a href="https://fierce-lowlands-57764.herokuapp.com/" target="_blank">application.</a>
+                                    <a href="https://github.com/candiceywu/note-taker" target="_blank">github.</a>
+                                </div>
+                                <div class="container">
+                                    <img src="assets/images/notetaker3.png"
+                                        alt="Landing page for homework Note Taker application" width="100%"/>
+                                </div>
+                            </div>
+    
+                            <div class="app-small">
+                                <header>my daily planner.</header>
+                                <div class="links">
+                                    <a href="https://candiceywu.github.io/my-daily-planner/"
+                                        target="_blank">application.</a>
+                                    <a href="https://github.com/candiceywu/my-daily-planner" target="_blank">github.</a>
+                                </div>
+                                <div class="container">
+                                    <img src="assets/images/mydailyplanner6.png" alt="Image of daily planner" width="100%"/>
+                                </div>
+                            </div>
+
+                        <!-- <div class="app-small">
                     <header>application 4.</header>
                     <img src="assets/images/image 4.jpeg" alt="Luis Barragan image 4 of inside" width="100%">
                 </div>
@@ -115,7 +150,7 @@
                     <header>application 5.</header>
                     <img src="assets/images/image 5.jpeg" alt="Luis Barragan image 5 of inside" width ="100%">
                 </div> -->
-            </div>
+                    </div>
         </section>
 
     </main>
